--- a/style.css
+++ b/style.css
@@ -10,6 +10,17 @@ padding: 10px;
 color: crimson;
 
 }
+section {
+    background-color: #0e0c93;
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display:flex;
+    justify-content: center; 
+}
+
+.chamada-texto{
+margin-right: 5%;
+}
 
 h1{
     font-size: 30px;           /* tamanho da fonte */
