--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
 background-color: rgb(255, 0, 0); /*cor do fundo da pagina*/
 color: rgb(0, 0, 0); /* cor da escrita*/
 font-family:"Roboto Slab", sans-serif;
+margin: 0px;
+margin-bottom: 100px;
 }
 
 header {
@@ -11,7 +13,7 @@ padding: 10px;
 color: crimson;
 
 }
-section {
+.chamada {
     background-color: #0e0c93;
     padding-bottom: 80px;
     padding-top: 80px;
@@ -32,4 +34,30 @@ h1{
 p{
     font-size: 16px;
     color: firebrick;
+}
+
+.categoria{
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+
+.categoria-videos{
+    display: flex;
+    overflow: auto;
+    gap: 10px;
+}
+
+.categoria-videos img{
+    opacity: 0,5;
+    height: 200px;
+}
+
+.categoria-videos img:hover{
+opacity: 0,5;
+border: 1px solid blue;
+}
+
+.categoria h2 {
+    color: darkblue;
 }
