--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background-color: rgb(255, 0, 0); /*cor do fundo da pagina*/
+background-color: hwb(#0e0c93); /*cor do fundo da pagina*/
 color: rgb(0, 0, 0); /* cor da escrita*/
 font-family:"Roboto Slab", sans-serif;
 margin: 0px;
