--- a/style.css
+++ b/style.css
@@ -1,61 +1,66 @@
 body {
-background-color: hwb(#0e0c93); /*cor do fundo da pagina*/
-color: rgb(0, 0, 0); /* cor da escrita*/
-font-family:"Roboto Slab", sans-serif;
-margin: 0px;
-margin-bottom: 100px;
+    background-color: hwb(#0e0c93);
+    /*cor do fundo da pagina*/
+    color: rgb(0, 0, 0);
+    /* cor da escrita*/
+    font-family: "Roboto Slab", sans-serif;
+    margin: 0px;
+    margin-bottom: 100px;
 }
 
 header {
-border: solid 2px black;
-font-size: 32px;
-padding: 10px;
-color: rgb(0, 0, 0);
-
+    border: solid 2px rgb(51, 12, 143);
+    font-size: 32px;
+    padding: 10px;
+    color: rgb(218, 30, 30);
 }
+
 .chamada {
-    background-color: #0e0c93;
+    background-color: #08080a;
     padding-bottom: 80px;
     padding-top: 80px;
-    display:flex;
-    justify-content: center; 
+    display: flex;
+    justify-content: center;
 }
 
-.chamada-texto{
-margin-right: 5%;
+.chamada-texto {
+    margin-right: 5%;
 }
 
-h1{
-    font-size: 30px;           /* tamanho da fonte */
-    text-align: center;        /* centralizado */
-    text-transform: uppercase; /* letras maiúsculas */
+h1 {
+    font-size: 30px;
+    /* tamanho da fonte */
+    text-align: center;
+    /* centralizado */
+    text-transform: uppercase;
+    /* letras maiúsculas */
 }
 
-p{
+p {
     font-size: 16px;
     color: firebrick;
 }
 
-.categoria{
+.categoria {
     padding-left: 20px;
     padding-right: 20px;
     margin-top: 50px;
 }
 
-.categoria-videos{
+.categoria-videos {
     display: flex;
     overflow: auto;
     gap: 10px;
 }
 
-.categoria-videos img{
-    opacity: 0,5;
+.categoria-videos img {
+    opacity: 0, 5;
     height: 200px;
 }
 
-.categoria-videos img:hover{
-opacity: 0,5;
-border: 1px solid blue;
+.categoria-videos img:hover {
+    opacity: 0, 5;
+    border: 1px solid blue;
 }
 
 .categoria h2 {
