--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
 }
 
 .chamada {
-    background-color:#9d0000;
+    background-color: #938997;
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
