--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: hwb(firebrick);
+    background-color: hwb(#938997);
     /*cor do fundo da pagina*/
     color: rgb(0, 0, 0);
     /* cor da escrita*/
